Update AzureUpload.java